# zsQt

./: CMakeLists.txt  readme.md
cmake/toolchains/: aarch64-native-linux-gnu copy.cmake  aarch64-unknown-linux-gnu.cmake
examples/: CMakeLists.txt
examples/zswidgets/: CMakeLists.txt  simpleqt.pro
